--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,24 @@
-.App {
-  text-align: center;
+
+.main-container{
+  padding:10%;
+  border-radius:10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.input-line{
+  display: grid;
+  grid-template-columns: 10% 25% 10% 18% 18% 15%  ;
+  margin-left:10px;
+  margin-right:0.5px;
+}
+.input-line *{
+  margin-right: 10px;
+  margin-left: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.table-container{
+  padding: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.out-line{
+  margin-left: 15px;
 }
